--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-USER_ID=1000
-GROUP_ID=1000
-TIMEZONE=Etc/UTC
-JELLYFIN_URL=foo.bar
-QBITTORRENT_INCOMING_CONNECTIONS_PORT=6881
-MOVIES_DIRECTORY=/foo/bar
-TV_SHOWS_DIRECTORY=/foo/bar
+USER_ID=
+GROUP_ID=
+TIMEZONE=
+JELLYFIN_URL=
+RADARR_API_KEY=
+SONARR_API_KEY=
+QBITTORRENT_USERNAME=
+QBITTORRENT_PASSWORD=
+QBITTORRENT_INCOMING_CONNECTIONS_PORT=
+MOVIES_DIRECTORY=
+TV_SHOWS_DIRECTORY=
