Now using Recyclarr and latest qBittorrent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,7 +96,7 @@ services:
     restart: unless-stopped
 
   qbittorrent:
-    image: lscr.io/linuxserver/qbittorrent:4.6.7
+    image: lscr.io/linuxserver/qbittorrent:latest
     container_name: qbittorrent
     environment:
       - PUID=${USER_ID}
@@ -161,3 +161,12 @@ services:
     ports:
       - 6767:6767
     restart: unless-stopped
+
+  recyclarr:
+    image: ghcr.io/recyclarr/recyclarr:latest
+    container_name: recyclarr
+    user: ${USER_ID}:${GROUP_ID}
+    volumes:
+      - ./configs/recyclarr:/config
+    environment:
+      - TZ=${TIMEZONE}
