--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ TIMEZONE=
 JELLYFIN_URL=
 RADARR_API_KEY=
 SONARR_API_KEY=
+SABNZBD_PORT=
 QBITTORRENT_USERNAME=
 QBITTORRENT_PASSWORD=
 QBITTORRENT_INCOMING_CONNECTIONS_PORT=
