--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     devices:
       - /dev/dri:/dev/dri
       - /dev/kfd:/dev/kfd
-    restart: unless-stopped
+    restart: always
 
   radarr:
     image: lscr.io/linuxserver/radarr:latest
@@ -36,7 +36,7 @@ services:
       - ${MOVIES_DIRECTORY}/data/movies:/data/movies
     ports:
       - 7878:7878
-    restart: unless-stopped
+    restart: always
 
   sonarr:
     image: lscr.io/linuxserver/sonarr:latest
@@ -51,7 +51,7 @@ services:
       - ${TV_SHOWS_DIRECTORY}/data/tvshows:/data/tvshows
     ports:
       - 8989:8989
-    restart: unless-stopped
+    restart: always
 
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:latest
@@ -65,7 +65,7 @@ services:
       - ./configs/linuxserver/prowlarr:/config
     ports:
       - 9696:9696
-    restart: unless-stopped
+    restart: always
 
   flaresolverr:
     image: ghcr.io/flaresolverr/flaresolverr:latest
@@ -77,7 +77,7 @@ services:
       - TZ=${TIMEZONE}
     ports:
       - "${PORT:-8191}:8191"
-    restart: unless-stopped
+    restart: always
 
   sabnzbd:
     image: lscr.io/linuxserver/sabnzbd:latest
@@ -92,8 +92,8 @@ services:
       - ${MOVIES_DIRECTORY}/data/movies:/data/movies
       - ${TV_SHOWS_DIRECTORY}/data/tvshows:/data/tvshows
     ports:
-      - 8081:8081 # Use 8080 for setup, then change to 8081
-    restart: unless-stopped
+      - ${SABNZBD_PORT}:${SABNZBD_PORT}
+    restart: always
 
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
@@ -113,12 +113,12 @@ services:
       - 8082:8082
       - ${QBITTORRENT_INCOMING_CONNECTIONS_PORT}:${QBITTORRENT_INCOMING_CONNECTIONS_PORT}
       - ${QBITTORRENT_INCOMING_CONNECTIONS_PORT}:${QBITTORRENT_INCOMING_CONNECTIONS_PORT}/udp
-    restart: unless-stopped
+    restart: always
 
   decluttarr:
     image: ghcr.io/manimatter/decluttarr:latest
     container_name: decluttarr
-    restart: unless-stopped
+    restart: always
     environment:
       - TZ=${TIMEZONE}
       - PUID=${USER_ID}
@@ -160,7 +160,7 @@ services:
       - ${TV_SHOWS_DIRECTORY}/data/tvshows:/data/tvshows
     ports:
       - 6767:6767
-    restart: unless-stopped
+    restart: always
 
   recyclarr:
     image: ghcr.io/recyclarr/recyclarr:latest
@@ -170,3 +170,4 @@ services:
       - ./configs/recyclarr:/config
     environment:
       - TZ=${TIMEZONE}
+    restart: always
