--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
     networks:
       - default_network
     ports:
-      - "${PORT:-8191}:8191"
+      - ${PORT:-8191}:8191
     restart: always
 
   sabnzbd:
