--- a/.env
+++ b/.env
@@ -4,6 +4,4 @@ TIMEZONE=
 JELLYFIN_URL=
 SABNZBD_PORT=
 QBITTORRENT_INCOMING_CONNECTIONS_PORT=
-MOVIES_DIRECTORY=
-TV_SHOWS_DIRECTORY=
-OTHERS_DIRECTORY=
+DATA_DIRECTORY=
